重新整理文件夹

--- a/easyuitest/layout/layout2.html
+++ b/easyuitest/layout/layout2.html
@@ -5,9 +5,9 @@
 	<title>Alert Messager - jQuery EasyUI Demo</title>
 	<link rel="stylesheet" type="text/css" href="../src/easyui/easyui.css">
 	<link rel="stylesheet" type="text/css" href="../src/easyui/icon.css">
-	<link rel="stylesheet" type="text/css" href="../src/easyui/demo.css">
-	<script type="text/javascript" src="../src/easyui/jquery.min.js"></script>
-	<script type="text/javascript" src="../src/easyui/jquery.easyui.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../src/easyui/demo.css">
+	<script type="text/javascript" src="../../src/easyui/jquery.min.js"></script>
+	<script type="text/javascript" src="../../src/easyui/jquery.easyui.min.js"></script>
 	<style type="text/css">
 		#container{
 			background-color:#0ff;
