--- a/layout/centerlayout.html
+++ b/layout/centerlayout.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alert Messager - jQuery EasyUI Demo</title>
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/themes/default/easyui.css">
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/themes/icon.css">
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/demo.css">
-	<link rel="stylesheet" href="../../src/bootstrap/css/bootstrap.min.css">
-	<script type="text/javascript" src="../../src/easyui/jquery.min.js"></script>
-	<script type="text/javascript" src="../../src/easyui/jquery.easyui.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/default/easyui.css">
+	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/icon.css">
+	<link rel="stylesheet" type="text/css" href="../src/easyui/demo.css">
+	<link rel="stylesheet" href="../src/bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="../src/easyui/jquery.min.js"></script>
+	<script type="text/javascript" src="../src/easyui/jquery.easyui.min.js"></script>
 </head>
 <body style="background: #ddd;height: 100%;padding: 0">
 <div class="container-fluid" style="width: 100%;height: 100%;padding:30px;overflow:auto;">
