--- a/layout/commonlayout.html
+++ b/layout/commonlayout.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>layout - jQuery EasyUI Demo</title>
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/themes/default/easyui.css">
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/themes/icon.css">
-	<link rel="stylesheet" type="text/css" href="../../src/easyui/demo.css">
-	<script type="text/javascript" src="../../src/easyui/jquery.min.js"></script>
-	<script type="text/javascript" src="../../src/easyui/jquery.easyui.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/default/easyui.css">
+	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/icon.css">
+	<link rel="stylesheet" type="text/css" href="../src/easyui/demo.css">
+	<script type="text/javascript" src="../src/easyui/jquery.min.js"></script>
+	<script type="text/javascript" src="../src/easyui/jquery.easyui.min.js"></script>
 </head>
 <body class="easyui-layout">
 	<div data-options="region:'north'" style="height:90px;background:#fff;padding:10px">
