自定义动态生成modal调整

--- a/layout/left_right_height1.html
+++ b/layout/left_right_height1.html
@@ -14,6 +14,7 @@
 			overflow:hidden;
 			margin:0 100px;
 			padding-right:220px; /* 宽度大小等与边栏宽度大小*/
+			box-sizing: border-box !important;
 		}
 		* html #container{
 			height:1%; /* So IE plays nice */
@@ -24,6 +25,7 @@
 			border-right:220px solid #f00;
 			margin-right:-220px;
 			float:left;
+			box-sizing: content-box;
 		}
 		#sidebar{
 			background-color:#f00;
