--- a/bootstraptest/css/alarm_modal.css
+++ b/bootstraptest/css/alarm_modal.css
@@ -1,15 +1,4 @@
-/*警告模态框*/
-.modal_center{
-	position:relative;
-	top:50%;
-	left:50%;
-	transform: translate(-50%,-50%);
-	width: 100%;
-	height: 100%;
-}
-.modal-body{
-	padding: 0!important;
-}
+
 .img_sm1{
 	width:15px;
 	height: 20px;
@@ -20,6 +9,7 @@
 	 height: 15px;
 	 float: right;
  }
+
 .clearfloat:after{
 	content: '';
 	display: block;
@@ -31,39 +21,17 @@
 .actives{
 	background: #E6F0FF;
 }
-#alarmModal .modal_center{
-	width:700px;
-	height:500px;
+html,body{
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
 }
-#alarmModal .modal-content{
+ #container{
 	width: 100%;
 	height: 100%;
-}
-#alarmModal .modal-content .modal-header{
-	background: #237AE5;
-	color:#fff;
-	width: 100%;
-	height: 12%;
-}
-#alarmModal .modal-content  a{
-	text-decoration: none;
-}
-#alarmModal .modal-content  a:link{
-	text-decoration: none;
-}
-#alarmModal .modal-content  a:visited{
-	text-decoration: none;
-}
-#alarmModal .modal-content  a:hover{
-	text-decoration: none;
-	color:#000;
-}
-#alarmModal .modal-content  a:active{
-	text-decoration: none;
-}
-#alarmModal #container{
-	width: 100%;
-	height: 100%;
+	position:relative;
+	 overflow:hidden;
 }
 * html #container{
 	height:1%; /* So IE plays nice */
@@ -73,7 +41,7 @@
 	top:0;
 	left:0;
 	z-index:999;
-	width: 30%;
+	width: 20%;
 	height: 100%;
 	/*background:#E7F1FF ;*/
 	float: left;
@@ -144,7 +112,7 @@
 	top:0;
 	left:0;
 	float: left;
-	width:70%;
+	width:49%;
 	height: 100%;
 }
 
@@ -184,24 +152,15 @@
 /* 邀请参会--弹出框 */
 #invite{
 	position: relative;
-	top:-100%;
-	left:100%;
+	top:0;
+	left:0;
 	float: left;
-	width:50%;
+	width:31%;
 	height: 100%;
 	border-left: 1px solid #ddd;
-	display: none;
+	display:block;
 }
-#invite .modal-content{
-	width: 100%;
-	height: 100%;
-}
-#invite .modal-content .modal-body{
-	background-color: #fff;
-	padding: 5px;
-	width: 100%;
-	height: 100%;
-}
+
 #invite .nav-pills{
 	border-bottom: 1px solid #ccc;
 }
