--- a/bootstraptest/css/call.css
+++ b/bootstraptest/css/call.css
@@ -26,7 +26,7 @@
 }
 
 .main-btns .btn-dial,.main-btns .btn-hang-up{
-	background: url(../../conference/img/dial.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial.png) 0 0/50px 50px no-repeat;
 	height: 30px;
 	cursor: pointer;
 	margin:0 auto;
@@ -35,10 +35,10 @@
 	display: block;
 }
 .main-btns .btn-hang-up{
-	background:  url(../../conference/img/hang-up.png) 0 0/50px 50px no-repeat;
+	background:  url(../img/hang-up.png) 0 0/50px 50px no-repeat;
 }
 .btn-del{
-	background:  url(../../conference/img/dial-del.png) 0 0/24px 18px no-repeat;
+	background:  url(../img/dial-del.png) 0 0/24px 18px no-repeat;
 	width: 24px;
 	height: 18px;
 	cursor: pointer;
@@ -100,47 +100,47 @@
 
 .numbers-container .pushed1{
 	margin-left: 16px;
-	background: url(img/dial1.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial1.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed2{
-	background: url(img/dial2.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial2.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed3{
 	margin-right: 0;
-	background: url(../../conference/img/dial3.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial3.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed4{
 	margin-left: 16px;
-	background: url(../../conference/img/dial4.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial4.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed5{
-	background: url(../../conference/img/dial5.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial5.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed6{
 	margin-right: 0;
-	background: url(../../conference/img/dial6.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial6.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed7{
 	margin-left: 16px;
-	background: url(../../conference/img/dial7.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial7.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed8{
-	background: url(../../conference/img/dial8.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial8.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed9{
 	margin-right: 0;
-	background: url(../../conference/img/dial9.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial9.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushedasterisk{
 	margin-left:16px;
-	background: url(../../conference/img/dial-asterisk.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial-asterisk.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushed0{
-	background: url(../../conference/img/dial0.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial0.png) 0 0/50px 50px no-repeat;
 }
 .numbers-container .pushednumber{
 	margin-right: 0;
-	background: url(../../conference/img/dial-number.png) 0 0/50px 50px no-repeat;
+	background: url(../img/dial-number.png) 0 0/50px 50px no-repeat;
 }
 /******** pdf展示***********/
 
