增加视频全屏结束测试代码

--- a/src/video/video-js.css
+++ b/src/video/video-js.css
@@ -359,11 +359,11 @@ body.vjs-full-window {
   font-size: 3em;
   line-height: 1.5em;
   height: 1.5em;
-  width: 3em;
-  display: block;
+  width: 2em;
+  display: none;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 160px;
+  left: 240px;
   padding: 0;
   cursor: pointer;
   opacity: 1;
@@ -912,7 +912,7 @@ body.vjs-full-window {
   vertical-align: middle;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: contain;
+  background-size: 104% 112%;
   background-color: #000000;
   cursor: pointer;
   margin: 0;
@@ -927,7 +927,7 @@ body.vjs-full-window {
 .vjs-poster img {
   display: block;
   vertical-align: middle;
-  margin: 0 auto;
+  margin: 0;
   max-height: 100%;
   padding: 0;
   width: 100%; }
@@ -976,8 +976,8 @@ body.vjs-full-window {
   line-height: 3em;
   min-width: 2em;
   width: auto;
-  padding-left: 1em;
-  padding-right: 1em; }
+  padding: 1em;
+}
 
 .vjs-live .vjs-time-control {
   display: none; }
@@ -1074,9 +1074,9 @@ video::-webkit-media-text-track-display {
 
 .vjs-error .vjs-error-display:before {
   color: #fff;
-  content: 'X';
+  content: '获取资源失败';
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 4em;
+  font-size: 2em;
   left: 0;
   line-height: 1;
   margin-top: -0.5em;
