增加媒体查询和优化滚动条demo

--- a/layout/module_layout/index.html
+++ b/layout/module_layout/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<div id="car1" class="carousel slide" data-ride="carousel" data-interval="20000">
+<div id="nav_module" class="carousel slide" data-ride="carousel" data-interval="20000">
 	<!--轮播区域-->
 	<div class="carousel-inner">
 		<!--具体轮播项-->
@@ -24,7 +24,7 @@
 			<div class="page1">
 				<div class="gridster">
 					<ul>
-						<li data-row="1" data-col="1" data-sizex="3" data-sizey="2" class="case">
+						<li data-row="1" data-col="1" data-sizex="9" data-sizey="8" class="case">
 							<a href="javascript:toSubMenu('case/case_list')"><h4>执行案件</h4></a>
 							<ul class="court-content">
 								<li class='left_show'>
@@ -44,15 +44,15 @@
 
 							</ul>
 						</li>
-						<li data-row="1" data-col="2" data-sizex="3" data-sizey="2"></li>
-						<li class="try" data-row="1" data-col="3" data-sizex="3" data-sizey="2"></li>
-						<li data-row="2" data-col="1" data-sizex="3" data-sizey="4"></li>
-						<li data-row="2" data-col="4" data-sizex="2" data-sizey="2"></li>
-						<li data-row="2" data-col="6" data-sizex="2" data-sizey="2"></li>
-						<li data-row="2" data-col="8" data-sizex="2" data-sizey="2"></li>
-						<li data-row="3" data-col="4" data-sizex="2" data-sizey="2"></li>
+						<li data-row="1" data-col="10" data-sizex="9" data-sizey="8">222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222</li>
+						<li class="try" data-row="1" data-col="19" data-sizex="9" data-sizey="8">333333333333333333333333333333333333333333333333333333333333333333333333333333333</li>
+						<li data-row="9" data-col="1" data-sizex="9" data-sizey="10">4444444444444444444444444444444444444444444444444444444444444444444444444444444</li>
+						<li data-row="9" data-col="10" data-sizex="6" data-sizey="5">5</li>
+						<li data-row="9" data-col="16" data-sizex="6" data-sizey="5">6</li>
+						<li data-row="2" data-col="22" data-sizex="6" data-sizey="5">7</li>
+						<!--<li data-row="3" data-col="4" data-sizex="2" data-sizey="2"></li>
 						<li data-row="3" data-col="6" data-sizex="2" data-sizey="2"></li>
-						<li data-row="3" data-col="8" data-sizex="2" data-sizey="2"></li>
+						<li data-row="3" data-col="8" data-sizex="2" data-sizey="2"></li>-->
 
 					</ul>
 				</div>
@@ -66,8 +66,8 @@
 			<div class="page2">
 				<div class="gridster">
 					<ul>
-						<li data-row="1" data-col="1" data-sizex="3" data-sizey="2" class="case">
-							<a href="javascript:toSubMenu('case/case_list')"><h4>执行案件</h4></a>
+						<li data-row="1" data-col="1" data-sizex="9" data-sizey="6" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
 							<ul class="court-content">
 								<li class='left_show'>
 									<div>
@@ -86,14 +86,167 @@
 
 							</ul>
 						</li>
-						<li data-row="1" data-col="2" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="1" data-col="3" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="2" data-col="1" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="2" data-col="2" data-sizex="3" data-sizey="2" ></li>
-						<li class="try" data-row="2" data-col="3" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="3" data-col="1" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="3" data-col="2" data-sizex="3" data-sizey="2" ></li>
-						<li data-row="3" data-col="3" data-sizex="3" data-sizey="2" ></li>
+						<li data-row="1" data-col="1" data-sizex="9" data-sizey="6" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="9" data-sizey="6" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="6" data-sizey="5" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="6" data-sizey="10" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="6" data-sizey="10" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="6" data-sizey="10" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+<li data-row="1" data-col="1" data-sizex="6" data-sizey="10" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+						<li data-row="1" data-col="1" data-sizex="6" data-sizey="10" class="case">
+							<a href="javascript:toSubMenu('case/case_list')"><h4>1执行案件</h4></a>
+							<ul class="court-content">
+								<li class='left_show'>
+									<div>
+										<span class="red">办理中案件:</span><span id="case_processing" class='red'>0</span>
+									</div>
+									<div>
+										<span>已结束案件:</span><span id="case_close">0</span>
+									</div>
+									<div>
+										<span>缺少材料归档结案:</span><span id="case_close_lack">0</span>
+									</div>
+									<div>
+										<span>案件总数:</span><span  id="case_total">0</span>
+									</div>
+								</li>
+
+							</ul>
+						</li>
+
 					</ul>
 				</div>
 			</div>
@@ -101,16 +254,16 @@
 
 	</div>
 	<!-- 左右方向 -->
-	<a href="#car1" class="carousel-control left" data-slide="prev">
+	<a href="#nav_module" class="carousel-control left" data-slide="prev">
 		<span class="glyphicon glyphicon-chevron-left"></span>
 	</a>
-	<a href="#car1" class="carousel-control right" data-slide="next">
+	<a href="#nav_module" class="carousel-control right" data-slide="next">
 		<span class="glyphicon glyphicon-chevron-right"></span>
 	</a>
 	<!-- 增加导航圆点 -->
 	<ul class="carousel-indicators">
-		<li class="active" data-target="#car1" data-slide-to="0"></li>
-		<li data-target="#car1" data-slide-to="1"></li>
+		<li class="active" data-target="#nav_module" data-slide-to="0"></li>
+		<li data-target="#nav_module" data-slide-to="1"></li>
 
 	</ul>
 </div>
@@ -126,8 +279,8 @@
 
     gridster = $(".gridster > ul").gridster({
         widget_margins: [10, 10],
-        widget_base_dimensions: [80, 80],
-        min_cols: 9
+        widget_base_dimensions: [40, 40],
+        min_cols: 30
     }).data('gridster');
     var count=$('.gridster>ul>li').length
     var colors=['#e4393c','#999','#888','#555','#e4393c','#999','#888','#555','#e4393c','#999','#888','#555']
