--- a/plugintest/message/message.css
+++ b/plugintest/message/message.css
@@ -11,9 +11,6 @@
   width: 100%;
   border: 1px solid #000;
 }
-.chat-area .chat-list section {
-  display: block;
-}
 .chat-area .chat-send {
   position: absolute;
   bottom: 0;
@@ -21,10 +18,10 @@
   width: 100%;
   border: 1px solid #ddd;
 }
-section.chat-left {
+div.chat-left {
   text-align: left;
 }
-section.chat-left span {
+div.chat-left span {
   max-width: 60px;
   height: 36px;
   font-weight: normal;
@@ -33,7 +30,7 @@ section.chat-left span {
   overflow: hidden;
   float: left;
 }
-section.chat-left > div {
+div.chat-left > div {
   max-width: 225px;
   display: inline-block;
   position: relative;
@@ -44,7 +41,7 @@ section.chat-left > div {
   box-shadow: inset 0 0 1px #ddd;
   vertical-align: top;
 }
-section.chat-left > div:before {
+div.chat-left > div:before {
   content: "";
   position: absolute;
   left: -5px;
@@ -55,10 +52,10 @@ section.chat-left > div:before {
   border-right: 7px solid #ddd;
   border-bottom: 4px solid transparent;
 }
-section.chat-right {
+div.chat-right {
   text-align: right;
 }
-section.chat-right span {
+div.chat-right span {
   max-width: 60px;
   height: 36px;
   font-weight: normal;
@@ -67,7 +64,7 @@ section.chat-right span {
   overflow: hidden;
   float: right;
 }
-section.chat-right > div {
+div.chat-right > div {
   max-width: 225px;
   position: relative;
   display: inline-block;
@@ -81,7 +78,7 @@ section.chat-right > div {
   vertical-align: top;
   word-break: break-all;
 }
-section.chat-right > div:before {
+div.chat-right > div:before {
   content: "";
   position: absolute;
   right: -5px;
